@@ -8,6 +8,7 @@ https://github.com/jythontools/jython
 
 Jython 2.7.2b3
   Bugs fixed
+    - [ 2820 ] Import fails with UnicodeDecodeError if sys.path contains invalid UTF-8 bytes
 
 Jython 2.7.2b2
   Bugs fixed
